# ternary-signal-flow

./: AGENT.md  Cargo.toml  INSIGHT.md  README.md
memory/: JOURNAL.md
src/: lib.rs
